tests/NormalTests/paczka1/fuzzy1/14570814.err
Error in line 7: g6NLqjlMnfp S564 38,1
Error in line 5: SwfNV A510 9,2
Error in line 26: HA8ESPK9R A606 16,3
Error in line 35: HA8ESPK9R S564 -4,0
Error in line 21: g6NLqjlMnfp A428 263,7
Error in line 32: HA8ESPK9R S564 80,6
